<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:bind="http://robobinding.org/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                tools:ignore="MissingPrefix"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        bind:text="${name}"/>
    <TextView
        android:id="@+id/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        bind:text="{hello}" />

    <Button
        android:id="@+id/button_say_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="say Hello"
        bind:onClick="sayHello"/>


</LinearLayout>
