<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:bind="http://robobinding.org/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                tools:ignore="MissingPrefix"
    android:orientation="vertical"
    android:layout_centerInParent="true">

    <Button
        android:id="@+id/button_hello"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World"
        bind:onClick="callHelloWorld"/>

    <Button
        android:id="@+id/button_listview"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="List View"
        bind:onClick="callListView"/>


</LinearLayout>
